# goit-pyweb-hw-08

./: pyproject.toml  readme.md
task_1/: config.ini  models.py  queries.py  seed.py
task_2/: config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py
